--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,8 @@
 
 {% include favicons.html %}
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700italic,700|Oxygen:400,300,700">
+
 <link rel="stylesheet" href="{{ "/assets/styles/site.css" | prepend: site.baseurl | prepend: site.url }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ '/rss.xml' | prepend: site.baseurl | prepend: site.url }}">
