Update first episode with music attribution, fix some styling

--- a/_assets/styles/base.less
+++ b/_assets/styles/base.less
@@ -53,6 +53,7 @@ h5 {
   color: @black;
   font-family: "Lobster Two", cursive;
   font-weight: 400;
+  font-style: italic;
   line-height: 1.333;
 }
 
