--- a/_assets/styles/site.less
+++ b/_assets/styles/site.less
@@ -23,8 +23,11 @@
 // Main styles
 .site-header {
   padding: 6rem 0;
-
   text-align: center;
+
+  h1 {
+    font-size: 6rem;
+  }
 }
 
 // Navigation
