--- a/_assets/styles/site.less
+++ b/_assets/styles/site.less
@@ -289,4 +289,4 @@
 #mc_embed_signup { padding: 4rem 0 !important; }
 
 // Responsive-related classes
-// @import 'responsive.less';
+@import 'responsive.less';
