Add email to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,11 @@
       {% endif %}
       -->
       <li>
+        <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#102;&#097;&#118;&#105;&#099;&#111;&#110;&#118;&#097;&#108;&#108;&#101;&#121;&#046;&#115;&#104;&#111;&#119;" title="Email">
+          Email
+        </a>
+      </li>
+      <li>
         <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="RSS Feed">
           RSS
         </a>
