--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,8 @@ layout: base
         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
           <span itemprop="name">{{ site.author.name }}</span>
         </span>
-        on <time datetime="{{ page.date | date_to_rfc822 }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+        on
+        <time datetime="{{ page.date | date_to_rfc822 }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
       </p>
     </div>
     <div class="post-meta-right">
