Update some things, change URL structure to be what I wanted in the first place

--- a/_assets/styles/base.less
+++ b/_assets/styles/base.less
@@ -35,6 +35,10 @@ a {
   color: @gray-darkest;
   // text-decoration: none;
   transition: all .2s;
+
+  &.no-underline {
+    text-decoration: none;
+  }
 }
 
 a:hover,
