--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,15 @@
 <footer class="site-footer">
   <div class="site-footer-social">
+    <div class="show-on-ios" style="display:none;">
+      <a href="overcast://x-callback-url/add?url={{ site.episodes_rss_feed }}" class="no-underline">
+        <img src="https://overcast.fm/img/logo.svg" height="64" width="64" alt="overcast.fm"/>
+        <br />
+        Subscribe to Favicon Valley<br /> with Overcast
+      </a>
+    </div>
+
+    <hr />
+
     <ul>
       {% if site.social.twitter %}
       <li>
@@ -8,29 +18,13 @@
         </a>
       </li>
       {% endif %}
-      <!-- {% if site.social.github %}
-      <li>
-        <a href="https://github.com/{{ site.social.github }}" title="Github">
-          Github
-        </a>
-      </li>
-      {% endif %} -->
-      <!--
-      {% if site.social.googleplus %}
-      <li>
-        <a href="https://plus.google.com/+{{ site.social.googleplus }}?rel=author" title="Google+">
-          Google+
-        </a>
-      </li>
-      {% endif %}
-      -->
       <li>
         <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#102;&#097;&#118;&#105;&#099;&#111;&#110;&#118;&#097;&#108;&#108;&#101;&#121;&#046;&#115;&#104;&#111;&#119;" title="Email">
           Email
         </a>
       </li>
       <li>
-        <a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" title="RSS Feed">
+        <a href="/feed.xml" title="RSS Feed">
           RSS
         </a>
       </li>
