--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,1 +1,2 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/1.3.1/lazysizes.min.js"></script>
 <script src="/assets/scripts/site-pack.js"></script>
