Episode 3 is live!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,16 @@
     <hr />
 
     <ul>
+      <li>
+        <a href="{{ site.itunes_url }}" title="Subscribe on iTunes">
+          Subscribe on iTunes
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.episodes_rss_feed }}" title="RSS Feed">
+          Episode RSS Feed
+        </a>
+      </li>
       {% if site.social.twitter %}
       <li>
         <a href="https://twitter.com/{{ site.social.twitter }}" title="Twitter">
@@ -21,11 +31,6 @@
       <li>
         <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#102;&#097;&#118;&#105;&#099;&#111;&#110;&#118;&#097;&#108;&#108;&#101;&#121;&#046;&#115;&#104;&#111;&#119;" title="Email">
           Email
-        </a>
-      </li>
-      <li>
-        <a href="/feed.xml" title="RSS Feed">
-          RSS
         </a>
       </li>
     </ul>
