--- a/_includes/social_meta_tags.html
+++ b/_includes/social_meta_tags.html
@@ -13,20 +13,16 @@
 {% if page.description %}
 <meta content="{{ page.description }}" property="og:description">
 {% else %}
-<meta content="{{ site.description }}" property="og:description">
+<meta content="{{ site.description | strip_html }}" property="og:description">
 {% endif %}
 {% if page.url %}
 <meta content="{{ page.url | prepend: site.baseurl | prepend: site.url }}" property="og:url">
 {% endif %}
 {% if page.date %}
 <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-<meta content="{{ site.url }}/about/" property="article:author">
+<meta content="{{ site.url }}/about" property="article:author">
 {% endif %}
-{% if page.open_graph_image %}
-<meta content="{{ site.url }}/assets/images/{{ page.open_graph_image }}" property="og:image">
-{% else %}
-<meta content="{{ site.url }}/assets/images/logo.png" property="og:image">
-{% endif %}
+<meta content="{{ site.favicon.png }}" property="og:image">
 
 <!-- Twitter Cards  -->
 <meta name="twitter:card" content="summary">
@@ -45,10 +41,6 @@
 {% if page.description %}
 <meta name="twitter:description" content="{{ page.description }}">
 {% else %}
-<meta name="twitter:description" content="{{ site.description }}">
+<meta name="twitter:description" content="{{ site.description | strip_html }}">
 {% endif %}
-{% if page.header_bg_image %}
-<meta name="twitter:image:src" content="{{ site.url }}/assets/images/{{ page.header_bg_image }}">
-{% else %}
-<meta name="twitter:image:src" content="{{ site.url }}/assets/images/logo.png">
-{% endif %}
+<meta name="twitter:image:src" content="{{ site.favicon.png }}">
