Fix date on episode page

--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -9,7 +9,7 @@ layout: base
 
   <div class="post-meta">
     <p>
-      Released on <time datetime="{{ page.date | date_to_rfc822 }}" itemprop="datePublished">{{ episode.date | date: "%b %-d, %Y" }}</time>
+      Released on <time datetime="{{ page.date | date_to_rfc822 }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
     </p>
   </div>
 
