--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
 
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
+<link rel="dns-prefetch" href="//ajax.googleapis.com">
 {% if site.google_analytics.id %}
 <link rel="dns-prefetch" href="//www.google-analytics.com">
 {% endif %}
