--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,8 +28,8 @@
 
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ site.episodes_rss_feed }}">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700italic,700|Oxygen:400,300,700">
-<link rel="stylesheet" href="/assets/styles/site.css" inline>
+<link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700italic,700|Oxygen:400,300,700" rel="stylesheet">
+<link href="/assets/styles/site.css" rel="stylesheet" inline>
 
 <!-- Mailchimp signup code -->
 <link rel="stylesheet"href="//cdn-images.mailchimp.com/embedcode/slim-081711.css">
