--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,22 @@
 
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ site.episodes_rss_feed }}">
-<link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,400italic,700italic,700|Oxygen:400,300,700" rel="stylesheet">
+
+<!-- Webfont loading -->
+<script>
+  WebFontConfig = {
+    google: {
+     families: ['Oxygen:400,300,700', 'Lobster Two:400,400italic,700italic,700']
+    }
+  };
+
+  (function(d) {
+    var wf = d.createElement('script'), s = d.scripts[0];
+    wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js';
+    s.parentNode.insertBefore(wf, s);
+  })(document);
+</script>
+
 <link href="/assets/styles/site.css" rel="stylesheet" inline>
 
 <!-- Mailchimp signup code -->
