Add contact form

--- a/_assets/styles/responsive.less
+++ b/_assets/styles/responsive.less
@@ -29,6 +29,11 @@
     width: 90% !important;
   }
 
+  .form {
+    width: 100%;
+  }
+
+
 }
 
 @media (max-width: @grid-breakpoint-small-max) { // iPhone size
