Tweaks to logo url

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
   <div class="site-header-avatar">
     <img class="site-header-avatar-img"
-        src="{{ '/avatar256.png' | prepend: site.assets_images }}">
+        src="{{ site.logo_url }}">
   </div>
 
   <div class="site-header-title">
