--- a/_assets/styles/site.less
+++ b/_assets/styles/site.less
@@ -110,7 +110,7 @@
 }
 
 .site-footer {
-  padding-top: 6rem;
+  padding-top: 2rem;
   text-align: center;
 }
 
@@ -212,16 +212,9 @@
   }
 }
 
-.post-comments {
-  margin-top: 2rem;
-  margin-right: 0;
-  margin-bottom: 2rem;
-  margin-left: 0;
-}
-
-.post-comments-button {
-  margin-top: 4rem;
-  text-align: center;
+.post-shownotes,
+.post-media {
+  margin: 2rem 0;
 }
 
 // Pagination
@@ -279,7 +272,7 @@
 
 // Contact page
 .page-contact {
-  
+
 }
 
 // Hack to hide div if not the current target
