--- a/_assets/styles/utilities.less
+++ b/_assets/styles/utilities.less
@@ -13,7 +13,11 @@
 .text-center { text-align: center; }
 .text-left   { text-align: left;   }
 .text-right  { text-align: right;  }
-.text-large  { font-size: 2.2rem; }
+
+.text-small  { font-size: 1.4rem;  }
+.text-large  { font-size: 2.2rem;  }
+
+.text-bold   { font-weight: bold;  }
 
 // Block-level center
 .block-center { margin: 0 auto; }
