--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
 <script>
   WebFontConfig = {
     google: {
-     families: ['Oxygen:400,300,700', 'Lobster Two:400,400italic,700,700italic']
+     families: ['Oxygen:400,300,700', 'Lobster Two:400,400italic,700,700italic', 'Delius Swash Caps']
     }
   };
   (function(d) {
