--- a/_includes/social_meta_tags.html
+++ b/_includes/social_meta_tags.html
@@ -30,11 +30,10 @@
 
 <!-- Twitter Cards  -->
 {% if page.layout == 'episode' %}
-{% capture audio_url %}{{ page.episode_id | prepend: 'https://audio.simplecast.fm/' | append: '.mp3' }}{% endcapture %}
 <meta name="twitter:card" content="player">
-<meta name="twitter:player" content="{{ audio_url }}">
-<meta name="twitter:player:height" content="30">
-<meta name="twitter:player:width" content="300">
+<meta name="twitter:player" content="{{ page.episode_id | prepend: 'https://audio.simplecast.fm/' | append: '.mp3' }}">
+<meta name="twitter:player:height" content="200">
+<meta name="twitter:player:width" content="360">
 {% else %}
 <meta name="twitter:card" content="summary">
 {% endif %}
