--- a/_assets/styles/site.less
+++ b/_assets/styles/site.less
@@ -166,57 +166,6 @@
   }
 }
 
-
-// Individual post
-.post-title {
-  margin-bottom: 2rem;
-}
-
-.post-meta {
-  font-size: 1.3rem;
-  color: @gray-darker;
-  .clearfix;
-}
-
-.post-meta-left {
-  float: left;
-}
-
-.post-meta-right {
-  float: right;
-}
-
-.post-content {
-  margin-bottom: 4rem;
-
-  figure,
-  .iframe-gmap {
-    margin-top: 6rem;
-    margin-right: -8rem;
-    margin-bottom: 6rem;
-    margin-left: -8rem;
-    text-align: center;
-  }
-
-  picture {
-    display: block;
-  }
-
-  a {
-    display: inline-block;
-  }
-
-  img {
-    margin: 0 auto;
-    max-width: 100%;
-  }
-}
-
-.post-shownotes,
-.post-media {
-  margin: 2rem 0;
-}
-
 // Pagination
 .posts-pagination {
   margin-top: 8rem;
@@ -268,6 +217,74 @@
 
 .posts-pagination-none {
   color: @gray-dark;
+}
+
+// Individual post
+.post-title {
+  margin-bottom: 2rem;
+}
+
+.post-meta {
+  font-size: 1.3rem;
+  color: @gray-darker;
+  .clearfix;
+}
+
+.post-meta-left {
+  float: left;
+}
+
+.post-meta-right {
+  float: right;
+}
+
+.post-content {
+  margin-bottom: 4rem;
+
+  figure,
+  .iframe-gmap {
+    margin-top: 6rem;
+    margin-right: -8rem;
+    margin-bottom: 6rem;
+    margin-left: -8rem;
+    text-align: center;
+  }
+
+  picture {
+    display: block;
+  }
+
+  a {
+    display: inline-block;
+  }
+
+  img {
+    margin: 0 auto;
+    max-width: 100%;
+  }
+}
+
+.post-shownotes,
+.post-media {
+  margin: 2rem 0;
+}
+
+.post-sponsor {
+  margin: 0 auto;
+  padding: 2rem;
+  width: 54rem;
+  margin-bottom: 2rem;
+  border: solid 1px @gray-light;
+  border-radius: .5rem;
+  .text-center;
+}
+
+.post-sponsor-title {
+  margin-bottom: 2rem;
+}
+
+.post-sponsor-image {
+  width: 40rem;
 }
 
 // Contact page
