Tweak sponsor redirect page

--- a/_layouts/sponsor_redirect.html
+++ b/_layouts/sponsor_redirect.html
@@ -15,7 +15,13 @@
 88    88  8  8ee8  88 88e8 8eee8 88  8    8ee8  88  8 88eee 88eee 88ee   88     88     8eee8 88ee8 88e8 88  8 8ee88   88
     </pre>
     <p>
-      Thank you for helping the show. This page will redirect in <span id="timer"></span> seconds. <a href="{{ page.sponsor_redirect }}">Click here if you are not redirected.<a>
+      {{ page.title }}
+    </p>
+    <p>
+      Thank you for helping the show. This page will redirect in <span id="timer"></span> seconds.
+    </p>
+    <p>
+      <a href="{{ page.sponsor_redirect }}">Click here if you are not redirected.<a>
     </p>
     <script>
       var count = 8;
