--- a/_assets/styles/site.less
+++ b/_assets/styles/site.less
@@ -272,7 +272,7 @@
 .post-sponsor {
   margin: 0 auto;
   padding: 2rem;
-  width: 54rem;
+  max-width: 54rem;
   margin-bottom: 2rem;
   border: solid 1px @gray-light;
   border-radius: .5rem;
