--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,9 +37,18 @@
   </div>
 
   <div class="site-footer-inner">
-    <p>Want to send email better? <br /><a href="https://www.sendwithus.com?ref=faviconvalley.show">Try Sendwithus for free</a>!</p>
+    <p>
+      Want to send email better? <br /><a href="https://www.sendwithus.com?ref=faviconvalley.show">Try Sendwithus for free</a>!
+    </p>
     <br />
-    <p><small>Site built with &lt;3 by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a></small></p>
-    <p><small><time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time></small></p>
+    <p>
+      <a href="https://twitter.com/faviconvalley" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @faviconvalley</a>
+    </p>
+    <p>
+      <small>Site built with &lt;3 by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a></small>
+    </p>
+    <p>
+      <small><time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time></small>
+    </p>
   </div>
 </footer>
