Fix sponsor page auto redirect

--- a/_layouts/sponsor_redirect.html
+++ b/_layouts/sponsor_redirect.html
@@ -36,7 +36,7 @@
       }
 
       window.setTimeout(function(){
-        window.location = '{{ page.sponsor_redirect }}}';
+        window.location = '{{ page.sponsor_redirect }}';
       }, count * 1000);
     </script>
   </body>
