Update some stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,10 +45,10 @@
       <a href="https://twitter.com/faviconvalley" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @faviconvalley</a>
     </p>
     <p>
-      <small>Site built with &lt;3 by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a></small>
+      <small>Site made with ❤ by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a></small>
     </p>
     <p>
-      <small><time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time></small>
+      <p><small>&copy; 2015 -&nbsp;<time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time></small></p>
     </p>
   </div>
 </footer>
