--- a/_includes/social_meta_tags.html
+++ b/_includes/social_meta_tags.html
@@ -31,7 +31,7 @@
 <!-- Twitter Cards  -->
 {% if page.layout == 'episode' %}
 <meta name="twitter:card" content="player">
-<meta name="twitter:player" content="{{ page.episode_id | prepend: 'https://audio.simplecast.fm/' | append: '.mp3' }}">
+<meta name="twitter:player" content="{{ page.episode_id | prepend: 'https://audio.simplecast.com/' | append: '.mp3' }}">
 <meta name="twitter:player:height" content="200">
 <meta name="twitter:player:width" content="360">
 {% else %}
