--- a/_assets/styles/base.less
+++ b/_assets/styles/base.less
@@ -20,11 +20,16 @@ html {
 }
 
 body {
-  width: 60%;
-  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  min-height: 100vh;
+
   font-size: @base-rem-unit;
   line-height: 1.6;
-  font-family: "Oxygen", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   background: #fcfcfc;
   font-weight: 300;
 }
@@ -32,7 +37,7 @@ body {
 // Give all links a nice transition
 a {
   color: @gray-darkest;
-  // text-decoration: none;
+  text-decoration: none;
   transition: all .2s;
 
   &.no-underline {
@@ -54,9 +59,7 @@ h4,
 h5 {
   margin: 0;
   color: @black;
-  font-family: "Lobster Two", cursive;
-  font-weight: 400;
-  font-style: italic;
+  font-weight: 200;
   line-height: 1.333;
 }
 
@@ -129,7 +132,9 @@ img {
 
 pre,
 code {
-  font-family: "Droid Sans Mono", Monaco, "Lucida Sans Typewriter", Consolas, "Courier New", monospace;
+  font-family: "Droid Sans Mono", Monaco,
+    "Lucida Sans Typewriter", Consolas,
+    "Courier New", monospace;
   font-size: 1.4rem;
   color: @gray-lighter;
   background: @gray-darkest;
@@ -155,7 +160,7 @@ hr {
   margin: 4rem 0;
   border: 0;
   height: .1rem;
-  background-image: linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+  border-bottom: solid  rgba(0,0,0,.1);
 }
 
 strong {
