--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <header class="site-header" role="banner" itemscope itemtype="http://schema.org/WPHeader">
+  <!--
   <div class="site-header-avatar">
     <img class="site-header-avatar-img"
         src="{{ site.logo_url }}">
   </div>
+  -->
 
   <div class="site-header-title">
     <h1 itemprop="headline">
@@ -26,6 +28,12 @@
           Subscribe on iTunes
         </a>
       </li>
+      <li class="show-on-ios" style="display:none;">
+        <a href="overcast://x-callback-url/add?url={{ site.episodes_rss_feed }}" class="no-underline">
+          Subscribe in Overcast
+          <img src="https://overcast.fm/img/logo.svg" height="24" width="24" style="position:relative;top:6px;" alt="overcast.fm"/>
+        </a>
+      </li>
       {% assign site_pages = site.pages | sort: 'order' %}
       {% for page in site_pages %}
       {% if page.include_in_nav %}
@@ -39,10 +47,37 @@
       </li>
       {% endif %}
       {% endfor %}
+      <li>
+        <a href="{{ site.episodes_rss_feed }}" title="RSS Feed">
+          Episode RSS Feed
+        </a>
+      </li>
+      {% if site.social.twitter %}
+      <li>
+        <a href="https://twitter.com/{{ site.social.twitter }}" title="Twitter">
+          Twitter
+        </a>
+      </li>
+      {% endif %}
+      <li>
+        <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#102;&#097;&#118;&#105;&#099;&#111;&#110;&#118;&#097;&#108;&#108;&#101;&#121;&#046;&#115;&#104;&#111;&#119;" title="Email">
+          Email
+        </a>
+      </li>
     </ul>
-  </nav>
 
-  <div class="site-header-subscribe">
-    {% include mailchimp_embed.html %}
-  </div>
+    <p>
+      Want to send email better? <br /><a href="https://www.sendwithus.com?ref=faviconvalley.show">Try Sendwithus for free</a>!
+    </p>
+    <br />
+    <p>
+      <a href="https://twitter.com/faviconvalley" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @faviconvalley</a>
+    </p>
+    <p>
+      <small>Site made with ❤ by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a></small>
+    </p>
+    <p>
+      <p><small>&copy; 2015 -&nbsp;<time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time></small></p>
+    </p>
+  </nav>
 </header>
