--- a/_assets/styles/responsive.less
+++ b/_assets/styles/responsive.less
@@ -2,15 +2,13 @@
 
   // Resize for larger screens
   body {
-    font-size: 1.8rem;
+    font-size: 1.7rem;
   }
 
 }
 
 
 @media (max-width: @grid-breakpoint-medium-max) { // Everything up to desktop
-  body {
-  }
 
   .site-container {
     margin-top: 4rem;
@@ -50,6 +48,7 @@
 
   .site-header {
     width: 100%;
+    max-width: 100%;
     padding-right: 2rem;
     text-align: center;
   }
@@ -70,6 +69,7 @@
 
   .site-content {
     width: 100%;
+    max-width: 100%;
     padding-top: 2rem;
     padding-right: 2rem;
     padding-bottom: 2rem;
