--- a/_includes/header.html
+++ b/_includes/header.html
@@ -73,11 +73,10 @@
     <p>
       <a href="https://twitter.com/faviconvalley" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @faviconvalley</a>
     </p>
-    <p>
-      <small>Site made with ❤ by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a></small>
-    </p>
-    <p>
-      <p><small>&copy; 2015 -&nbsp;<time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time></small></p>
+    <p class="site-header-copyright">
+      made with ❤ by <a href="https://brandonb.io?ref=faviconvalley">Brandon Brown</a>
+      <br />
+      &copy; 2015 -&nbsp;<time datetime="{{ site.time | date_to_rfc822 }}" itemprop="datePublished">{{ site.time | date: "%Y" }}</time>
     </p>
   </nav>
 </header>
