--- a/_assets/styles/site.less
+++ b/_assets/styles/site.less
@@ -15,24 +15,23 @@
 
 .site-header,
 .site-content {
-  padding: 2rem;
-  background: @white;
+  padding: 0 2rem 2rem;
 }
 
 // Main styles
 .site-header {
   width: 30%;
+  max-width: 30rem;
   padding-right: 8rem;
 
   h1 {
-    font-size: 6rem;
-    line-height: .9;
+    font-size: 3.6rem;
+    line-height: 1;
   }
 }
 
 // Navigation
 .site-header-nav {
-
   ul {
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -48,25 +47,16 @@
       width: 100%;
       display: inline-block;
       padding: 1rem;
+      text-decoration: none;
     }
 
     a:hover {
+      color: @black;
       text-decoration: none;
-      background: @gray-lighter;
+      background: @gray-light;
+      transform: scale(1.05);
     }
   }
-
-}
-
-.site-header-avatar {
-  // nothing here
-}
-
-.site-header-avatar-img {
-  width: 19.6rem;
-  height: auto;
-  border-radius: 50%;
-  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,.1);
 }
 
 .site-header-title {
@@ -92,17 +82,18 @@
   color: @black;
 }
 
+.site-header-copyright {
+  font-size: 1.2rem;
+}
+
 // Content area
 .site-content {
   width: 70%;
+  max-width: 70rem;
   padding-top: 4rem;
 }
 
 // Feed posts
-.posts-feed {
-  // nothing here right now
-}
-
 .posts-feed-item {
   padding-top: 6rem;
   padding-bottom: 6rem;
@@ -155,10 +146,6 @@
   flex: 1;
 }
 
-.posts-pagination-prev {
-  //
-}
-
 .posts-pagination-next {
   text-align: right;
 }
@@ -184,10 +171,6 @@
 
 .post-meta-right {
   float: right;
-}
-
-.post-precontent {
-  // Nothing here yet
 }
 
 .post-content {
@@ -228,12 +211,20 @@
   margin: 2rem 0;
 }
 
-.post-sponsor {
-  position: relative;
-  margin: 0 auto;
-  padding: 4rem;
+.post-sponsor-link {
+  display: block;
   max-width: 54rem;
+  margin: 0 auto;
   margin-bottom: 2rem;
+  text-decoration: none;
+}
+.post-sponsor-link:hover {
+  transform: scale(1.025);
+}
+
+.post-sponsor-inner {
+  position: relative;
+  padding: 4rem;
   border: solid 1px @gray-light;
   border-radius: .5rem;
   .text-center;
@@ -255,11 +246,6 @@
   padding: .6rem;
   font-size: 1rem;
   background: @gray-lightest;
-}
-
-// Contact page
-.page-contact {
-
 }
 
 // lazysizes
